<resources>
    <string name="app_name">計算機</string>
    <string name="hello_world">こんにちは!</string>

    <!-- 数字の文字 -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <!-- 四則演算の文字 -->
    <string name="plus">＋</string>
    <string name="minus">－</string>
    <string name="multi">×</string>
    <string name="div">÷</string>
    <string name="allclear">AC</string>

    <!-- イコールの文字 -->
    <string name="equal">＝</string>

    <!-- ディスプレイの初期値  -->
    <string name="initial_num">0</string>
</resources>

